# DMNLO

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
run_dmnlo/: CMakeLists.txt
run_dmnlo/ChiChi2QQ/: ChiChi2QQ_Couplings.F  ChiChi2QQ_GenCounterterms.h  ChiChi2QQ_GenCouplings.h  ChiChi2QQ_Kinematics.F  ChiChi2QQ_Kinematics.h  ChiChi2QQ_M2Counterterms.F  ChiChi2QQ_M2Dipole.F  ChiChi2QQ_M2GluinoBox.F  ChiChi2QQ_M2GluonBox.F  ChiChi2QQ_M2Propagator.F  ChiChi2QQ_M2Radiation.F  ChiChi2QQ_M2Tree.F  ChiChi2QQ_M2TreeHO.F  ChiChi2QQ_M2TreeMO.F  ChiChi2QQ_M2TreePerc.F  ChiChi2QQ_M2Vertex.F  ChiChi2QQ_Main.F  ChiChi2QQ_Model.h  ChiChi2QQ_SetCounterterms.F  ChiChi2QQ_SoftGluon.F
run_dmnlo/DD/: DD_Box.F  DD_EFTVertex.F  DD_EFTVertexCounter.F  DD_GenCounterterms.h  DD_GenCouplings.h  DD_Init.F  DD_Kinematics.F  DD_Looptest.F  DD_Looptest2.F  DD_Main.F  DD_Model.h  DD_PrintModel.F  DD_Prop.F  DD_PropCounter.F  DD_Running.F  DD_SetCounterterms.F  DD_SetCouplings.F  DD_SetCouplingsHO.F  DD_SigmaNucleon.F  DD_Tree.F  DD_TreeHO.F  DD_Vertex.F  DD_VertexCounter.F  DD_udsCheck.F  makefile
run_dmnlo/NeuQ2qx/: NeuQ2qx_Couplings.F  NeuQ2qx_DipoleKinematics.h  NeuQ2qx_GenCounterterms.h  NeuQ2qx_GenCouplings.h  NeuQ2qx_GenCouplingsMO.h  NeuQ2qx_Kinematics.F  NeuQ2qx_Kinematics.h  NeuQ2qx_M2Amp2V.F  NeuQ2qx_M2AmpBox2V.F  NeuQ2qx_M2AmpBoxH.F  NeuQ2qx_M2AmpH.F  NeuQ2qx_M2Box.F  NeuQ2qx_M2BoxG.F  NeuQ2qx_M2BoxH.F  NeuQ2qx_M2BoxV.F  NeuQ2qx_M2Counterterms.F  NeuQ2qx_M2Dipole.F  NeuQ2qx_M2DipoleInt.F  NeuQ2qx_M2Propagator.F  NeuQ2qx_M2PropagatorCounter.F  NeuQ2qx_M2PropagatorCounterH.F  NeuQ2qx_M2PropagatorCounterV.F  NeuQ2qx_M2PropagatorH.F  NeuQ2qx_M2PropagatorV.F  NeuQ2qx_M2Radiation.F  NeuQ2qx_M2RadiationDipole.F  NeuQ2qx_M2RadiationG.F  NeuQ2qx_M2RadiationH.F  NeuQ2qx_M2RadiationV.F  NeuQ2qx_M2Tree.F  NeuQ2qx_M2TreeGA.F  NeuQ2qx_M2TreeGAred.F  NeuQ2qx_M2TreeH.F  NeuQ2qx_M2TreeHgen.F  NeuQ2qx_M2TreePerc.F  NeuQ2qx_M2TreeV.F  NeuQ2qx_M2TreeVgen.F  NeuQ2qx_M2Vertex.F  NeuQ2qx_M2VertexCounter.F  NeuQ2qx_M2VertexCounterG.F  (+10 more)
run_dmnlo/QQ2xx/: QQ2xx_Couplings.F  QQ2xx_GenCounterterms.h  QQ2xx_GenCouplings.h  QQ2xx_Init2to2.h  QQ2xx_Init2to3.h  QQ2xx_Kinematics.F  QQ2xx_Kinematics.h  QQ2xx_M2AmpCorr.F  QQ2xx_M2AmpDigest.F  QQ2xx_M2AmpFF.F  QQ2xx_M2AmpFFbar.F  QQ2xx_M2AmpHH.F  QQ2xx_M2AmpHV.F  QQ2xx_M2AmpInit2to2.F  QQ2xx_M2AmpVH.F  QQ2xx_M2AmpVV.F  QQ2xx_M2BoxHH.F  QQ2xx_M2BoxHV.F  QQ2xx_M2BoxVH.F  QQ2xx_M2BoxVV.F  QQ2xx_M2CoulombCorrections.F  QQ2xx_M2DigestAmp.F  QQ2xx_M2FFbargen.F  QQ2xx_M2HHgen.F  QQ2xx_M2HVgen.F  QQ2xx_M2Init2to2.F  QQ2xx_M2Init2to3.F  QQ2xx_M2Loop.F  QQ2xx_M2Tree23.F  QQ2xx_M2Tree23FFbar.F  QQ2xx_M2Tree23HH.F  QQ2xx_M2Tree23HV.F  QQ2xx_M2Tree23VH.F  QQ2xx_M2Tree23VV.F  QQ2xx_M2VHgen.F  QQ2xx_M2VVgen.F  QQ2xx_M2_onshell_subtraction.F  QQ2xx_Main.F  QQ2xx_Model.h  QQ2xx_SetCounterterms.F  (+1 more)
run_dmnlo/staustau2QQ/: staustau2QQ_Couplings.F  staustau2QQ_Enhancement.F  staustau2QQ_GenCouplings.h  staustau2QQ_Kinematics.F  staustau2QQ_Kinematics.h  staustau2QQ_M2Brems.F  staustau2QQ_M2Counter.F  staustau2QQ_M2Dipole.F  staustau2QQ_M2Radiation.F  staustau2QQ_M2Tree.F  staustau2QQ_M2TreeH.F  staustau2QQ_M2TreeV.F  staustau2QQ_M2Vertex.F  staustau2QQ_Main.F  staustau2QQ_Model.h
run_dmnlo/stsT2xx/: stsT2xx_M2DipoleReal.F  stsT2xx_M2Real3g.F  stsT2xx_M2RealGhost.F  stsT2xx_M2RealQ.F  stsT2xx_Main.F
run_dmnlo/stst2QQ/: stst2QQ_Couplings.F  stst2QQ_DipoleKinematics.h  stst2QQ_GenCounterterms.h  stst2QQ_GenCouplings.h  stst2QQ_Kinematics.F  stst2QQ_Kinematics.h  stst2QQ_M2Boxcancel3.F  stst2QQ_M2Boxcancel6.F  stst2QQ_M2Boxitjs.F  stst2QQ_M2Boxjtis.F  stst2QQ_M2Boxsextet.F  stst2QQ_M2Boxtriplett.F  stst2QQ_M2Counterterm.F  stst2QQ_M2CountertermsProp.F  stst2QQ_M2Dipole.F  stst2QQ_M2Prop.F  stst2QQ_M2Tree.F  stst2QQ_M2Treesplittet.F  stst2QQ_M2Vertex.F  stst2QQ_M2realemissionDipoles.F  stst2QQ_M2realemissionTGlTGl.F  stst2QQ_M2realemissionTGlTNeu.F  stst2QQ_Main.F  (+10 more)
src/: CMakeLists.txt  DMNLO.cc  DMNLO.h  main.cc  params.cc
(+188 files in other folders)
